Small improvement in reminder email

--- a/alpha/accounts/templates/accounts/reminder_email.html
+++ b/alpha/accounts/templates/accounts/reminder_email.html
@@ -97,9 +97,9 @@
                                                         <![endif]-->
                                                         <table width="100%" cellpadding="0" cellapscing="0" style="border-collapse:collapse;" >
                                                             <tr>
-                                                                <td colspan="3" height="5" width="147">
+                                                                <td colspan="3" height="3" width="147" style="font-size: 1px; line-height: 3px;">
                                                                     <div style="line-height:0;">
-                                                                        <img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="147" height="5" alt="" />
+                                                                        <img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="147" height="3" alt="" />
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -168,9 +168,9 @@
                                                             </tr>
 
                                                             <tr>
-                                                                <td colspan="3" height="5">
+                                                                <td colspan="3" height="3" style="font-size: 1px; line-height: 3px;">
                                                                     <div style="line-height:0;">
-                                                                        <img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="10" height="5" alt="" />
+                                                                        <img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="10" height="3" alt="" />
                                                                     </div>
                                                                 </td>
                                                             </tr>
